lints.workspace = true

[package]
name = "gix-refspec"
version = "0.37.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project for parsing and representing refspecs"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
include = ["src/**/*", "LICENSE-*", "README.md"]
rust-version = "1.82"

[lib]
doctest = false

[dependencies]
gix-error = { version = "^0.1.0", path = "../gix-error" }
gix-revision = { version = "^0.41.0", path = "../gix-revision", default-features = false }
gix-validate = { version = "^0.11.0", path = "../gix-validate" }
gix-hash = { version = "^0.22.1", path = "../gix-hash" }
gix-glob = { version = "^0.24.0", path = "../gix-glob" }

bstr = { version = "1.12.0", default-features = false, features = ["std"] }
thiserror = "2.0.18"
smallvec = "1.15.1"

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }
insta = "1.46.1"
